--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -6,6 +6,7 @@ provisioner:
   name: ansible_playbook
   ansible_verbose: true
   ansible_verbosity: 2
+  idempotency_test: true
   require_ruby_for_busser: false
   require_chef_for_busser: true
   requirements_path: "./requirements.yml"
